RESOLVED FIXED87897
Inline blocks with margin wrap incorrectly with subpixel layout turned on
https://bugs.webkit.org/show_bug.cgi?id=87897
Summary Inline blocks with margin wrap incorrectly with subpixel layout turned on
Emil A Eklund
Reported 2012-05-30 14:05:08 PDT
inline blocks with margin wrap incorrectly with subpixel layout turned on
Attachments
Patch (12.21 KB, patch)
2012-05-30 14:12 PDT, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-05-30 14:12:27 PDT
Emil A Eklund
Comment 2 2012-05-30 14:19:18 PDT
Levi Weintraub
Comment 3 2012-05-30 14:27:53 PDT
Comment on attachment 144921 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=144921&action=review > Source/WebCore/rendering/RenderBlock.cpp:5512 > - float bpm = getBorderPaddingMargin(toRenderInline(child), childIterator.endOfInline); > + LayoutUnit bpm = getBorderPaddingMargin(toRenderInline(child), childIterator.endOfInline); > childMin += bpm; > childMax += bpm; Seems like we want to keep bpm a float to save an extra float conversion since childMin and childMax are floats. Otherwise this lgtm!
Emil A Eklund
Comment 4 2012-05-30 14:42:24 PDT
Note You need to log in before you can comment on or make changes to this bug.