Inline blocks with margin wrap incorrectly with subpixel layout turned on https://bugs.webkit.org/show_bug.cgi?id=87897

Reviewed by Levi Weintraub.

Source/WebCore:

Change WebCore::getBorderPaddingMargin and the helper function
getBPMWidth to return a LayoutUnit rather than an int as the padding and
margin values have subpixel precision. This fixes an issue where we would
incorrectly wrap inline blocks with a subpixel padding or margin.

Test: fast/sub-pixel/inline-block-with-margin.html

* rendering/RenderBlock.cpp:
(WebCore::getBPMWidth):
(WebCore::getBorderPaddingMargin):
(WebCore::RenderBlock::computeInlinePreferredLogicalWidths):

LayoutTests:

Add test for inline blocks with a subpixel margin. Marked as skipped on
all platforms but chromium as subpixel layout has not yet been enabled
for any other platform.

* fast/sub-pixel/inline-block-with-margin-expected.html: Added.
* fast/sub-pixel/inline-block-with-margin.html: Added.
* platform/efl/Skipped:
* platform/gtk-wk2/Skipped:
* platform/mac-lion/Skipped:
* platform/mac-snowleopard/Skipped:
* platform/mac-wk2/Skipped:
* platform/mac/Skipped:
* platform/qt-4.8/Skipped:
* platform/qt/Skipped:
* platform/win-wk2/Skipped:
* platform/win-xp/Skipped:
* platform/win/Skipped:
* platform/wincairo/Skipped:
* platform/wk2/Skipped:


Canonical link: https://commits.webkit.org/105698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118975 268f45cc-cd09-0410-ab3c-d52691b4dbfc